tests/machine/x/c/map_literal_dynamic.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:91:22: error: invalid initializer
   91 |   map_string_int m = (tmp_item_t){.a = x, .b = y};
      |                      ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
